[package]
name = "dsmr_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.0.1"
nom = "7.1.0"
chrono = "0.4.19"
ringbuf = "0.2.6"
postgres = { version = "0.19.2", features = ["with-chrono-0_4"], optional = true }
clap = { version = "3.0.5", features = ["derive"] }
serde = { version = "1.0.133", optional = true, features = ["derive"] }
reqwest = { version = "0.11.8", optional = true, features = ["blocking", "json"] }

[features]
database = ["postgres"]
api = ["serde", "reqwest"]

default = ["database", "api"]
